[gd_scene load_steps=45 format=2]

[ext_resource path="res://Assets/Music/Room2.mp3" type="AudioStream" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/Characters/KyloIdle2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Characters/KyloDead3.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/Characters/KyloRight.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/Backgrounds/backgroundroom2.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/Characters/KyloSideAttack1.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/Backgrounds/Room2Background.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/Characters/KyloJump2.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/Characters/KyloRight2.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/Characters/KyloSideAttack2.png" type="Texture" id=11]
[ext_resource path="res://Assets/UI/Down.png" type="Texture" id=12]
[ext_resource path="res://Assets/Sprites/Characters/KyloSideAttack3.png" type="Texture" id=13]
[ext_resource path="res://Assets/Sprites/Characters/KyloDead.png" type="Texture" id=14]
[ext_resource path="res://Assets/Sprites/Characters/KyloDead2.png" type="Texture" id=15]
[ext_resource path="res://Assets/Sprites/Characters/Kylo.png" type="Texture" id=16]
[ext_resource path="res://Assets/Sprites/Characters/KyloDead4.png" type="Texture" id=17]
[ext_resource path="res://Assets/Sprites/Characters/KyloIdle3.png" type="Texture" id=18]
[ext_resource path="res://Assets/Sprites/Characters/KyloJump1.png" type="Texture" id=19]
[ext_resource path="res://Assets/Sprites/Characters/KyloRight3.png" type="Texture" id=20]
[ext_resource path="res://Scripts/DoorToEnding.gd" type="Script" id=21]
[ext_resource path="res://Assets/Music/SoundEffects/hit.mp3" type="AudioStream" id=22]
[ext_resource path="res://Assets/UI/downarrow.png" type="Texture" id=23]
[ext_resource path="res://Assets/UI/peasoup.png" type="Texture" id=24]
[ext_resource path="res://Assets/UI/catcollar.png" type="Texture" id=25]
[ext_resource path="res://Assets/UI/birthdaycard.png" type="Texture" id=26]
[ext_resource path="res://Assets/UI/heart.png" type="Texture" id=27]
[ext_resource path="res://Assets/Sprites/Characters/Enemies/Boss3.png" type="Texture" id=28]
[ext_resource path="res://Assets/Sprites/Characters/Enemies/Boss2.png" type="Texture" id=29]
[ext_resource path="res://Assets/Sprites/Characters/Enemies/Boss4.png" type="Texture" id=30]
[ext_resource path="res://Assets/Sprites/Characters/Enemies/Boss.png" type="Texture" id=31]
[ext_resource path="res://Scripts/Boss.gd" type="Script" id=32]
[ext_resource path="res://Assets/Sprites/Characters/Enemies/Ouch3.png" type="Texture" id=33]
[ext_resource path="res://Assets/Sprites/Characters/Enemies/Ouch4.png" type="Texture" id=34]
[ext_resource path="res://Assets/Sprites/Characters/Enemies/Ouch1.png" type="Texture" id=35]
[ext_resource path="res://Assets/Sprites/Characters/Enemies/Ouch2.png" type="Texture" id=36]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 11.5 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 9 ) ],
"loop": false,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 10 ), ExtResource( 20 ), ExtResource( 10 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 4 ), ExtResource( 15 ), ExtResource( 17 ) ],
"loop": false,
"name": "Dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 11 ) ],
"loop": true,
"name": "AttackSide",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 3 ), ExtResource( 18 ), ExtResource( 3 ) ],
"loop": true,
"name": "AttackIdle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 103.5, 501.75 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 449, 14 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 57.5, 501.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 10.5, 12.5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 73.75, 56 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 31 ), ExtResource( 29 ), ExtResource( 28 ), ExtResource( 30 ), ExtResource( 28 ), ExtResource( 29 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 35 ), ExtResource( 36 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 33 ), ExtResource( 36 ) ],
"loop": true,
"name": "Ouch",
"speed": 5.0
} ]

[node name="Node2D" type="Node2D"]

[node name="Backgroundroom4" type="Sprite" parent="."]
position = Vector2( -541, -76 )
texture = ExtResource( 6 )

[node name="Backgroundroom3" type="Sprite" parent="."]
position = Vector2( 1437, -104 )
texture = ExtResource( 6 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )
autoplay = true

[node name="Backgroundroom2" type="Sprite" parent="."]
position = Vector2( 450, -78 )
texture = ExtResource( 6 )

[node name="Room2Background" type="Sprite" parent="."]
position = Vector2( 87, 355 )
texture = ExtResource( 8 )
offset = Vector2( 362, -603 )

[node name="Player" type="KinematicBody2D" parent="." groups=["Player"]]
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="Player"]
light_mask = 65
position = Vector2( 159, 119 )
current = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 79, 196.5 )
shape = SubResource( 4 )

[node name="PlayerAnimatedSprite" type="AnimatedSprite" parent="Player"]
position = Vector2( 78, 196 )
frames = SubResource( 5 )
animation = "AttackIdle"
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]

[node name="Edges" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Edges"]
position = Vector2( -102, -246.25 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Edges"]
position = Vector2( 449, 242 )
shape = SubResource( 2 )
one_way_collision_margin = 0.0

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Edges"]
position = Vector2( 955, -247.5 )
shape = SubResource( 3 )

[node name="Hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 22 )

[node name="DoorToEnding" type="Area2D" parent="."]
visible = false
script = ExtResource( 21 )

[node name="Arrow" type="Sprite" parent="DoorToEnding"]
visible = false
position = Vector2( 866, 192 )
texture = ExtResource( 23 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorToEnding"]
position = Vector2( 866, 215 )
shape = SubResource( 6 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="Heart" type="Sprite" parent="UI"]
position = Vector2( 18, 14 )
texture = ExtResource( 27 )

[node name="Dying" type="ColorRect" parent="UI"]
visible = false
margin_left = -21.0
margin_top = -21.0
margin_right = 352.0
margin_bottom = 238.0
color = Color( 1, 0.105882, 0.105882, 0.560784 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BdayCard" type="Sprite" parent="UI"]
visible = false
position = Vector2( 17, 30 )
texture = ExtResource( 26 )

[node name="PeaSoupRecipe" type="Sprite" parent="UI"]
visible = false
position = Vector2( 35, 30 )
texture = ExtResource( 24 )

[node name="CatCollar" type="Sprite" parent="UI"]
visible = false
position = Vector2( 49, 31 )
texture = ExtResource( 25 )

[node name="Boss" type="KinematicBody2D" parent="."]
script = ExtResource( 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boss"]
position = Vector2( 483.25, 169 )
shape = SubResource( 7 )

[node name="Boss" type="AnimatedSprite" parent="Boss"]
position = Vector2( 485, 162 )
frames = SubResource( 8 )
frame = 5
playing = true
